# jju

./: Makefile  README.md  setup.cfg  setup.py
docs/notebooks/: 00_scipy.ipynb  00_scipy.md  00_scipy.py  01_LOBPCG_JAX.ipynb  01_LOBPCG_JAX.md  01_LOBPCG_JAX.py
jju/: __init__.py  poly.py  poly_test.py  test_utils.py  types.py  types_test.py  utils.py
jju/linalg/: custom_gradients.py  custom_gradients_test.py
jju/linalg/lobpcg/: README.md  basic.py  basic_test.py  lobpcg_test.py  utils.py  utils_test.py
jju/sparse/: coo.py  coo_test.py  csr.py  csr_test.py
